improve person block css to avoid jumpyness too

--- a/_sass/team.scss
+++ b/_sass/team.scss
@@ -43,10 +43,11 @@
 .person-list-block {
   @include outer-container;
   @include span-columns(12);
-  margin: 0 0 0 20px;
-  padding-bottom: 3px;
-  padding-top: 3px;
+  margin: -6px 0 0 8px;
+  padding-top: 8px;
+  padding-left: 10px;
   display: block;
+  border: 2px solid transparent;
   min-height: 50px;
   
   .name {
